--- a/package.json
+++ b/package.json
@@ -169,7 +169,10 @@
         "version": "1.1",
         "icon": "Librespeed_A.png",
         "author": "Shurelol",
-        "level": 1
+        "level": 1,
+        "history": {
+            "v1.2": "增加不限速路径配置，以应对网盘直链播放的情况"
+        }
     },
     "CloudflareSpeedTest": {
         "name": "Cloudflare IP优选",
